# mailing_list_client

./: Cargo.toml  Dioxus.toml  tailwind.config.js
public/: tailwind.css
src/: error.rs  file.rs  home.rs  lib.rs  main.rs  menu.rs  not_found.rs  picker.rs  theme.rs
